[tool.poetry]
name = "unicorn-dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "unicorn_dashboard"}]

[tool.poetry.dependencies]
python = "^3.9"
unicornhatmini = "^0.0.2"
gpiozero = "^1.6.2"
pillow = "^9.4.0"
requests = "^2.28.2"
rpi-gpio = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
